--- a/assets/style.css
+++ b/assets/style.css
@@ -77,6 +77,7 @@ nav {
   height: 0;
   background-color: black;
   position: fixed;
+  top: 0;
   width: 100vw;
   z-index: 2;
   transition: 0.3s ease-in-out;
@@ -84,11 +85,20 @@ nav {
 nav ul {
   display: none;
 }
-nav ul a {
+nav ul li {
   font-weight: bold;
   font-size: 1.2em;
   color: white;
   text-decoration: none;
+  cursor: pointer;
+}
+nav ul li.active {
+  color: rgb(186, 33, 30);
+  text-decoration: underline;
+}
+nav ul li a {
+  color: inherit;
+  text-decoration: inherit;
 }
 
 .navopen #hamburger span:first-child {
@@ -123,6 +133,7 @@ nav ul a {
   position: fixed;
   top: 10px;
   left: 20px;
+  cursor: pointer;
 }
 
 #mare h1 {
@@ -148,9 +159,21 @@ h1 *, h2 * {
   font-family: "Chango", Arial, cursive;
 }
 
-h6 {
+h2 {
+  margin-bottom: 13px;
+}
+
+h5 {
   font-size: 1em;
   font-weight: 900;
+}
+
+h6 {
+  font-size: 1em;
+  color: grey;
+  margin: -10px 0 20px;
+  font-weight: 100;
+  font-style: italic;
 }
 
 a {
@@ -265,6 +288,30 @@ ul {
 .video-wrap button {
   margin-top: 20px;
 }
+.video-wrap table {
+  margin: 10px 0;
+  position: relative;
+  left: -5px;
+  width: 100%;
+  border-collapse: collapse;
+  max-width: 620px;
+}
+.video-wrap table tr {
+  border-bottom: 1px solid;
+}
+.video-wrap table td {
+  padding: 10px 0;
+}
+.video-wrap table td:first-child {
+  font-weight: bold;
+  width: 50%;
+}
+.video-wrap table td:last-child {
+  text-align: right;
+  font-style: italic;
+  opacity: 0.5;
+  padding-left: 10px;
+}
 
 #contact-bookings {
   margin-top: -15px;
@@ -378,6 +425,58 @@ ul {
   opacity: 1;
 }
 
+.content {
+  display: none;
+}
+.content.active {
+  display: block;
+}
+.content:not(#home) {
+  margin-top: 45px;
+  padding: 30px;
+}
+
+#band {
+  max-width: 1200px;
+  margin: 45px auto;
+}
+#band .head {
+  max-width: 800px;
+  margin: 0 auto 30px;
+  text-align: center;
+}
+#band .head img {
+  max-width: min(100%, 600px);
+}
+
+#bg-img {
+  background-image: url(/mare/assets/img/MaRe4.jpg);
+  height: 100px;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+}
+#bg-img + .member {
+  margin-top: 160px;
+}
+
+.member {
+  margin: 40px 0;
+}
+.member h2 {
+  margin-bottom: 13px;
+}
+.member img {
+  max-width: 300px;
+}
+.member > div {
+  max-width: 700px;
+  margin-bottom: 20px;
+}
+.member:first-of-type {
+  margin-top: 160px;
+}
+
 footer {
   border-top: 2px solid rgb(186, 33, 30);
   padding: 30px;
@@ -397,11 +496,35 @@ footer .policy ul {
 }
 footer .policy ul li {
   margin: 5px 0;
+  color: rgb(186, 33, 30);
+  cursor: pointer;
+}
+footer .policy ul li:hover {
+  text-decoration: underline;
+}
+footer .policy ul li.active {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+#imprint {
+  min-height: calc(100vh - 270px);
+}
+#imprint p {
+  max-width: unset;
+}
+
+#contact {
+  pointer-events: none;
 }
 
 section:not(.video-wrap) {
   padding: 30px;
   position: relative;
+}
+
+img {
+  max-width: 100%;
 }
 
 .abs-center, .emphasize .big {
@@ -421,6 +544,38 @@ section:not(.video-wrap) {
 
 .relative {
   position: relative;
+}
+
+.none {
+  display: none;
+}
+
+.bg-img, #bg-img {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+p {
+  line-height: 1.5;
+  max-width: 800px;
+  margin: 0 auto !important;
+}
+
+blockquote {
+  background-color: rgb(33, 52, 138);
+  width: calc(100% - 80px);
+  margin: 0;
+  padding: 20px 40px;
+}
+blockquote * {
+  letter-spacing: 1px;
+  color: #fff;
+  max-width: unset !important;
+}
+blockquote strong {
+  font-weight: 900;
+  letter-spacing: 5px;
 }
 
 @keyframes animateTitle1 {
@@ -463,6 +618,10 @@ section:not(.video-wrap) {
   }
 }
 @media only screen and (max-width: 719px) {
+  h1, h2, h3, h4, h5, h6 {
+    -webkit-hyphens: auto;
+            hyphens: auto;
+  }
   nav {
     display: flex;
     align-items: center;
@@ -475,9 +634,13 @@ section:not(.video-wrap) {
     margin: 15px 0;
   }
   #mare {
-    width: 290px;
+    width: 323px;
     margin-top: 60px;
     margin-left: 0 !important;
+  }
+  #contact {
+    border-top: 1px solid rgb(186, 33, 30);
+    padding: 20px;
   }
 }
 @media only screen and (min-width: 720px) {
@@ -495,11 +658,9 @@ section:not(.video-wrap) {
   }
   nav ul li {
     margin: 0 15px;
-  }
-  nav ul li a {
     font-size: 1em;
   }
-  nav ul li a:hover {
+  nav ul li:hover {
     color: rgb(186, 33, 30);
   }
   #logo {
@@ -524,6 +685,10 @@ section:not(.video-wrap) {
     font-size: 4em;
     letter-spacing: 8px !important;
   }
+  #contact {
+    border-left: 1px solid rgb(186, 33, 30);
+    padding-left: 20px;
+  }
   .emphasize .title {
     letter-spacing: 3px;
   }
@@ -535,6 +700,37 @@ section:not(.video-wrap) {
   }
   .video-wrap .description ul li {
     margin: 20px 0;
+  }
+  .content:not(#home) {
+    padding: 30px 60px;
+  }
+  #bg-img {
+    height: 130px;
+    margin: 40px 0;
+  }
+  #bg-img + .member {
+    margin-top: 260px;
+  }
+  .member {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    margin-bottom: 50px;
+  }
+  .member h2 {
+    margin-top: 0;
+  }
+  .member img {
+    margin-right: 30px;
+  }
+  .member:nth-of-type(even) {
+    flex-direction: row;
+  }
+  .member:nth-of-type(even) img {
+    margin-left: 30px;
+  }
+  .member:first-of-type {
+    margin-top: 260px;
   }
   footer {
     display: flex;
@@ -582,6 +778,9 @@ section:not(.video-wrap) {
   .video-wrap {
     flex-direction: row;
   }
+  .video-wrap h2 {
+    margin-top: 0;
+  }
   .video-wrap .video {
     height: 100vh;
     width: 0;
@@ -595,6 +794,9 @@ section:not(.video-wrap) {
   }
   .video-wrap .description ul li {
     margin: 20px 0;
+  }
+  .video-wrap table td {
+    padding: 20px 0;
   }
   .concert-list {
     right: unset;
@@ -615,6 +817,37 @@ section:not(.video-wrap) {
   #weplayed {
     padding: 30px 60px;
     height: auto;
+  }
+  .content:not(#home) {
+    margin-top: 60px;
+    padding: 30px 100px;
+  }
+  #band .head img {
+    max-width: 300px;
+    margin-bottom: 10px;
+    display: block;
+  }
+  #bg-img {
+    height: 160px;
+  }
+  #bg-img + .member {
+    margin-top: 310px;
+  }
+  .member {
+    margin-bottom: 70px;
+  }
+  .member img {
+    margin-right: 50px;
+  }
+  .member:nth-of-type(even) img {
+    margin-left: 50px;
+  }
+  .member > div {
+    min-width: 500px;
+  }
+  blockquote {
+    padding: 40px 80px;
+    width: calc(100% - 160px);
   }
 }
 @media (orientation: portrait) {
