--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: foo;
+  src: url(/mare/assets/fonts/Chango-Regular.woff) format("woff");
+}
 html, body {
   margin: 0;
   padding: 0;
@@ -101,6 +105,10 @@ nav ul li a {
   text-decoration: inherit;
 }
 
+#language {
+  font-size: 1em;
+}
+
 .navopen #hamburger span:first-child {
   transform: rotate(45deg);
   top: 50%;
@@ -129,7 +137,7 @@ nav ul li a {
   position: relative;
   z-index: 3;
   transform: rotateY(0deg);
-  animation: animateLogo 5s ease-in forwards;
+  animation: animateLogo 3s ease-in forwards;
   position: fixed;
   top: 10px;
   left: 20px;
@@ -144,23 +152,32 @@ nav ul li a {
 #mare h2 {
   text-transform: none;
 }
+#mare * {
+  -webkit-hyphens: none;
+          hyphens: none;
+}
 
 #maracatu {
   font-size: 2.7em;
   text-transform: none;
 }
 
+#renascente {
+  margin-top: 0;
+}
+
 h1, h2 {
-  font-family: "Chango", Arial, cursive;
+  font-family: foo, "Chango", Arial, cursive;
   color: white;
   text-transform: uppercase;
 }
 h1 *, h2 * {
-  font-family: "Chango", Arial, cursive;
+  font-family: inherit;
 }
 
 h2 {
   margin-bottom: 13px;
+  letter-spacing: 2px;
 }
 
 h5 {
@@ -254,10 +271,12 @@ ul {
   font-size: 3em;
   margin: 0;
   opacity: 0.1;
+  -webkit-hyphens: none;
+          hyphens: none;
 }
 .emphasize .title {
   color: rgb(186, 33, 30);
-  font-size: 1.5em;
+  font-size: 1em;
   margin-top: 0;
 }
 .emphasize .item * {
@@ -311,6 +330,14 @@ ul {
   font-style: italic;
   opacity: 0.5;
   padding-left: 10px;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  cursor: pointer;
 }
 
 #contact-bookings {
@@ -427,6 +454,7 @@ ul {
 
 .content {
   display: none;
+  min-height: calc(100vh - 270px);
 }
 .content.active {
   display: block;
@@ -465,6 +493,8 @@ ul {
 }
 .member h2 {
   margin-bottom: 13px;
+  text-transform: none;
+  letter-spacing: 1px;
 }
 .member img {
   max-width: 300px;
@@ -475,6 +505,14 @@ ul {
 }
 .member:first-of-type {
   margin-top: 160px;
+}
+
+#en .member {
+  display: none;
+}
+
+#en #bg-img {
+  display: none;
 }
 
 footer {
@@ -507,9 +545,6 @@ footer .policy ul li.active {
   text-decoration: underline;
 }
 
-#imprint {
-  min-height: calc(100vh - 270px);
-}
 #imprint p {
   max-width: unset;
 }
@@ -578,6 +613,10 @@ blockquote strong {
   letter-spacing: 5px;
 }
 
+.ml0 {
+  margin-left: 0 !important;
+}
+
 @keyframes animateTitle1 {
   0% {
     color: white;
@@ -633,6 +672,12 @@ blockquote strong {
   nav ul li {
     margin: 15px 0;
   }
+  #language {
+    position: absolute;
+    bottom: 35px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
   #mare {
     width: 323px;
     margin-top: 60px;
@@ -657,7 +702,7 @@ blockquote strong {
     margin-top: 23px;
   }
   nav ul li {
-    margin: 0 15px;
+    margin: 0 10px;
     font-size: 1em;
   }
   nav ul li:hover {
@@ -685,12 +730,13 @@ blockquote strong {
     font-size: 4em;
     letter-spacing: 8px !important;
   }
-  #contact {
+  #contact, #language {
     border-left: 1px solid rgb(186, 33, 30);
     padding-left: 20px;
   }
   .emphasize .title {
     letter-spacing: 3px;
+    font-size: 1.5em;
   }
   .emphasize .big {
     font-size: 7em;
@@ -763,7 +809,7 @@ blockquote strong {
   #renascente {
     font-size: 3em;
     letter-spacing: 3px !important;
-    margin-top: -20px !important;
+    margin-top: 0 !important;
   }
   #logo {
     top: 39px;
@@ -774,6 +820,9 @@ blockquote strong {
   }
   .emphasize .big {
     font-size: 10em;
+  }
+  nav ul li {
+    margin: 0 15px;
   }
   .video-wrap {
     flex-direction: row;
@@ -790,7 +839,7 @@ blockquote strong {
     width: 80%;
   }
   .video-wrap .description {
-    padding: 20px 50px;
+    padding: 10px 50px;
   }
   .video-wrap .description ul li {
     margin: 20px 0;
